# sward-shared

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROGRESS.md
sward_shared/adapters/: eventbridge.py  sqs.py
sward_shared/auth/: __init__.py  jwt_dependency.py
sward_shared/events/: domain_event.py  event_envelope.py
sward_shared/schemas/: health.py  pagination.py
tests/: test_domain_event.py  test_event_envelope.py  test_jwt_dependency.py  test_pagination.py
