[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sward-shared"
version = "0.1.0"
description = "Librería Python compartida para los microservicios del sistema SWARD"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "moto[events,sqs]>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
